<resources>
    <string name="app_name">Overlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addOverlay">Add Overlay</string>
    <string name="typName">DerTyp7214</string>
    <string name="typSub">Developer</string>
    <string name="rkName">RKBDI</string>
    <string name="rkSub">Designer</string>
    <string name="select_overlay">Select a overlay</string>
    <string name="search">Search</string>
    <string name="search_title">Search Overlays</string>
    <string name="cancel">Cancel</string>
    <string name="no_root">This app only works with Root!</string>
    <string name="ok">OK</string>
    <string name="changeOverlay">Change Overlays (%s)</string>
    <string name="github">GitHub</string>
    <string name="github_sub">App Sourcecode on Github</string>
    <string name="github_url">https://github.com/DerTyp7214/Overlayer</string>

    <string name="app_theme">App Theme</string>
    <string name="general">General</string>
    <string name="amoled_theme">Amoled Darkmode</string>
</resources>