<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/full_rounded">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/search_title"
        android:textColor="@color/title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundColor="@color/mainBackground"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="0dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/iconColor"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/iconColor"
        app:startIconTintMode="multiply">

        <de.dertyp7214.overlayer.components.CustomTextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/title"
            android:textColorHint="@color/subText"
            android:textCursorDrawable="@drawable/cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/buttonBackground"
            android:text="@string/cancel"
            android:textColor="@color/buttonForeground"
            app:rippleColor="@color/buttonForeground" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBackground"
            android:text="@string/search"
            android:textColor="@color/buttonForeground"
            app:rippleColor="@color/buttonForeground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>